<resources>
    <string name="app_name">Ruang Ilmu</string>
    <string name="Latihan_1">Materi Rangkuman Latihan 1</string>
    <string name="Latihan_2">Materi Rangkuman Latihan 2</string>
    <string name="Latihan_3">Materi Rangkuman Latihan 3</string>
    <string name="materi1_ipa">Ciri Khusus Mahkluk Hidup \u0026 Penggolongan Hewan</string>
    <string name="materi2_ipa">Hubungan Antar Makhluk Hidup Dalam Ekosistem \u0026 Energi</string>
    <string name="materi1_indo">Membaca Sastra \u0026 NONSASTRA</string>
    <string name="materi2_indo">Menulis Terbatas \u0026 MEYUNTING</string>
    <string name="materi1_mtk">Bilangan</string>
    <string name="materi2_mtk">Geometri Dan Pengukuran</string>
    <string name="info_nama">Nama:</string>
    <string name="InfoUser">Info Pengguna</string>
    <string name="LihatDetail">Lihat Detail</string>
    <string name="RuangIlmu">Ruang Ilmu</string>
    <string name="Ipa">IPA</string>
    <string name="Ilmu_Pengetahuan_Alam">Ilmu Pengetahuan Alam</string>
    <string name="Mtk">Matematika</string>
    <string name="Indo">Bahasa Indonesia</string>
    <string name="Latihan1">Latihan 1</string>
    <string name="Latihan2">Latihan 2</string>
    <string name="UjianIPA">Ujian IPA</string>
    <string name="UjianMTK">Ujian Matematika</string>
    <string name="UjianINDO">Ujian B.Indonesia</string>
    <string name="buku_ipa">IPA</string>
    <string name="buku_mtk">Matematika</string>
    <string name="buku_indo">Bahasa Indonesia</string>
    <string name="SpoilerMateriIPA1_1">A.	Ciri – ciri khusus hewan dan tumbuhan</string>
    <string name="SpoilerMateriIPA1_1_1">Ciri khusus hewan\n
        1.	Kelelawar\n
        -Mempunyai kemampuan bunti ultrasonik untuk mengetahui jarak atau lokasi mangsa.\n
        -Pendengaran tajam.\n
        -Kulit lentur dan ringan untuk terbang.\n
        -Hidup dalam gua atau tempat gelap.\n
        -Hewan yang hidup pada malam hari.\n
        2.	Cicak\n
        -Memiliki kaki perekat yang dapat menempel dan berjalan didinding.\n
        -Lidah panjang dan lengket untuk menangkap mangsa.\n
        -Memiliki kemampuan untuk memutuskan ekor.\n\n
        Ciri khusus tumbuhan\n
        1.	Tertai\n
        -Daun lebar dan tipis untuk memperbesar penguapan.\n
        -Batang berongga untuk mengapung di air dan sebagai alur udara.\n
        2.	Kantong semar\n
        -Mengeluarkan aroma manis (nectar) untuk memikat serangga.\n
        -Menghasilkan cairan enzim untuk mencerna serangga untuk memenuhi nitrogen\n
        -Memiliki daun yang berbentuk piala.\n
    </string>
    <string name="SpoilerMateriIPA1_2">B.	Pengelompokan makhluk hidup</string>
    <string name="SpoilerMateriIPA1_2_1">Pengelompokan hewan\n
        1.	Berdasarkan cara berkembang biak :\n
        \ta.	Bertelur (ovipar) : ayam,bebek,burung.\n
        \tb.	Melahirkan (vivipara) : paus, anjing, kambing, dan lumba-lumba.\n
        c.	Bertelur dan melahirkan (ovovivipar): kadal, hiu, ular, buaya, dan pesut.\n
        2.	Berdasarkan alat penapasan\n
        a.	Paru-paru : kelompok hewan mamlia (kambing,sapimlumba-lumba,dan lain-lain).\n
        b.	Insang :kelompok ikan,berudu.\n
        c.	Trakea : kelompok serangga (belalang,walang sangit).\n
        d.	Kulit :cacing tanah\n
        3.	Berdasarkan cara makan\n
        a.	Pemakan tumbuhan (herbivora) :kambing kuda,sapi dll).\n
        b.	Pemakan daging (karnivora): harimau,serigala,macan,dll).\n
        c.	Pemakan segelanya (omnivora) : ayam, bebek, tikus.\n\n
        Pengelompokan tumbuhan\n
        1.	Akar\n
        a.	Serabut :jagung, padi, tebu, kelapa, pohon pisang, dll.\n
        b.	Tunggan : jati, mangga, belimbing, rambutan,dll.\n
        2.	Batang\n
        a.	Berbatang rumput : padi, jagung, rumput teki.\n
        b.	Berbatang kayu : belimbing, mangga, rambutan.\n
        c.	Berbatang basah : bayam, pisang, pacar air.\n
        d.	Batang menjalar ditanah : ubi jalar, mentimun, dan semangka.\n
        3.	Biji\n
        a.	Berkeping satu ( monokotil) : jagung, padi, tebu, kelapa, pisang.\n
        b.	Berkeping dua (dikotil) : mangga, jambu, belimbing, kacang-kacangan.\n
    </string>
    <string name="SpoilerMateriIPA1_3">C.	Pentingnya pelestarian</string>
    <string name="SpoilerMateriIPA1_3_1">Untuk melindungi hewan dan tumbuhan langka, ada dua cara secara in situ (didalam habitat) contoh taman nasional dan cagara alam dan  eks situ (diluar habitat) contoh suaka margasatwa.\n\n
        Pelestarian atau perlindungan ada tiga cara, yaitu :\n
        a.	Suaka margasatwa :tempat perlindungan hewan langka secara eks situ.\n
        b.	Taman nasional : tempat pelindungan bagi hewan dan tumbuhan langka secara in situ.\n
        c.	Cagar alam : tempat perlindungan tumbuhan, satwa, dan ekosistemnya atau ekosistem tertentu yang berlangsung secara alami.\n
        d.	Kebun raya dan kebun botani untuk melestarikan tumbuhan.\n
    </string>
    <string name="SpoilerMateriIPA1_4">D.	Daur hidup</string>
    <string name="SpoilerMateriIPA1_4_1">Proses daur hidup hewan tersebut merupakan suatu perputaran atau siklus karena akan kembali pada titik awal mulanya. Daur hidup hewan berdasarkan proses perubahan bentuk tubuhnya dapat dibagi menjadi dua yaitu :\n
        1.	Daur hidup tanpa metamorphosis.\n
        Daur hidup yang diawali dari lahirnya atau menetasnya hewan baru yang berbentuk tubuh induknya. Contohnya ayam,kucing.\n
    </string>
    <string name="SpoilerMateriIPA1_4_2">2.	Daur hidup dengan metamorphosis.\n
        Daur hidup hewan yang lahir dengan bentuk yang berbeda dari induknya, dan mengalami perubahan bentuk yang bertahap hingga dewasa.\n\n
        Metamorfosis merupakan perubahan bentuk hewan secara bertahap setalah kelahiran atau penetasan hingga dewasa.\n
        Metamorphosis ada dua yaitu :\n
        1.	Metamorphosis sempurna\n
        Dialami oleh hewan yang pada saat lahir memiliki bentuk tubuh yang sangat berbeda sekali dengan induknya. Contohnya kupu-kupu, nyamuk, katak.\n
    </string>
    <string name="SpoilerMateriIPA1_4_3">2.	Metamorphosis tidak sempurna\n
        Hewan yang mirip dengan induknya tetaou ada bagian tubuh yang belum terbentuk, misalnya sayap. Contohnya capung,kecoa.\n
    </string>
    <string name="SpoilerMateriIPA2_1">A.	Hubungan antara makhluk hidup</string>
    <string name="SpoilerMateriIPA2_1_1">Simbiosis adalah semua jenis interaksi (hubungan) antara dua makhluk hidup yang berbeda jenis. Simbiosis ada 3 macam yaitu:\n
        1.	Sismbiosis mutualisme = hubungan yang saling menguntungkan\n
        Contoh : hubungan antara kupu-kupu dan bunga dan hubungan antar kerbau dan burung jalak.\n
        2.	Simbiosis komensalisme = hubungan satu diuntungkan dan satu lagi tidak diuntungkan dan tidak rugi.\n
        Contoh :tanaman anggrek dengan tanaman inangnya dan ikan remora dengan ikan hiu atau paus\n
        3.	Simbiosis parasitisme = hubungan satu diuntungkan dan yang satunya dirugikan.\n
        Contoh : tumbuhan benalu dengan tumbuhan inangnya dan cacing pita yang hidup didalam perut manusia.\n
    </string>
    <string name="SpoilerMateriIPA2_2">B.	Perubahan wujud benda</string>
    <string name="SpoilerMateriIPA2_2_1">
        1.	Membeku adalah perubahan wujud zat cari ke padat.\n
        2.	Mencair adalah perubahan wujud zat padat ke cair\n
        3.	Menguap adalah perubahan wujud zat cair ke gas.\n
        4.	Mengembun adalah perubahan wujud zat gas ke cair\n
        5.	Menublim adalah perubahan wujud zat dari padat ke gas.\n
        6.	Mengkristal atau menghablur adalah perubahan wujud benda yang mulanya bersifat gas berubah menjadi padat, perubahan wujud ini terjadi karena penurunan suhu atau pelepasan panas yang dialami bendar tersebut.\n
    </string>
    <string name="SpoilerMateriIPA2_3">C.	Perpindahan panas (kalor)</string>
    <string name="SpoilerMateriIPA2_3_1">
        Macam-macam perpindahan panas yaitu :\n
        1.	Konduksi adalah perpindahan panas melalui perantara (benda pada bersifat logam ) dan dimana zat perantaranya tidak ikut berpindah.\n
        2.	Konvksi adalah perpindahan panas melalui zat perantara (air dan angina) dengan disertai perpindahan zat perantara.\n
        3.	Radiasi adalah perpindahan panas tanpa melalui perantara (langsung).\n
    </string>
    <string name="SpoilerMateriIndo1_A">A.	Membaca Nonsastra</string>
    <string name="SpoilerMateriIndo1_A1">
        Menentukan Makna Kata/Istilah\n
        Teks nonsastra adalah teks yang berisi karangan ilmiah dan bertujuan menambah wawasan dan pengetahuan pembacanya. Kesalahan penggunaan kata-kata atau istilah dapat menimbulkan perbedaan penafsiran. Kata-kata atau istilah yang digunakan dapat berupa kata baku, kata bersinonim, kata berkonotasi, kata denotasi, atau kata yang mengalami perubahan makna.\n
        \n
        Menentukan Antonim/Sinonim\n
        Antonim adalah kata yang memiliki makna yang berlawanan, misalnya :\n
        \u000B • Dulu \u003E\u003C sekarang\n
        \u000B • Ekor \u003E\u003C kepala\n
        \u000B •	 Asli \u003E\u003C palsu\n
        \u000B •	 Tanya \u003E\u003C jawab\n
        Sedangkan sinonim adalah kata yang memiliki makna yang sama, misalkan :\n
        \u000B •	 Laba = untung\n
        \u000B •	 Mudah = gampang\n
        \u000B •	 Abadi = awet,kekal\n\n
        Menggali Informasi Tersurat Teks\n
        Sebuah paragraph pasti memuat informasi, baik itu informasi tersurat ataupun informasi tersirat. Informasi tersurat adalah sebuat informasi yang tertulis secara jelas di dalam teks. Sedangkan informasi tersirat adalah informasi yang tidak tertulis didalam teks.\n\n
        Untuk dapat menemukan informasi yang terdapat pada teks dapat menggunakan rumus 5W + 1H (Who, What, Where, Why, When dan How) atau menggunakan singakatan ADIKSIMBA (apa, di mana, kapan, siapa, mengapa dan bagaimana)\n
        \n\n
        Menentukan U
        nsur Teks\n
        Dalam sebuah paragraf, umumnya terusun atas satu kalimat utama dan beberapa kalimat penjelas.\n\n
        Kalimat Utama\n\n
            -Kalimat utama memuat permasalan yang dapat diuraikan lebih lanjut\n
            -Biasanya berupa sebuah kalimat lengkap yang dapat berdiri sendiri\n
            -Memiliki arti yang jelas tanpa dihubungkan dengan kalimat lain\n
            -Dapat dibentuk tanpa kata sambung\n
            -Pada paragraph induktif, sering ditandai dengan kata jadi atau dengan demikian.\n\n
        Kalimat Penjelas\n\n
            -Kalimat penjelas merupakan kalimat yang tidak dapat beridir sendiri.\n
            -Kalimat penjelas akan memiliki arti setelah dihubungkan dengan kalimat lain dalam satu paragraph\n
            -Memerlukan bantuan kata sambung, frasa penghubung, atau kalimat transisi\n
            -Berisikan rincian, keterangan, contoh dan data lain yang bersifat mendukung kalimat utama\n    </string>
    <string name="SpoilerMateriIndo1_B">B.	Membaca Sastra</string>
    <string name="SpoilerMateriIndo1_B1">
        Menentukan Isi Pantun\n\n
        Dua larik pertama merupakan sampiran dan dua larik berikutnya merupakan isi. Pantun memiliki pola rima akhir a-b-a-b.\n\n
        Ciri-ciri pantun\n\n
        \u000B •	Terdiri atas empat larik dalam satu bait\n
        \u000B •	Teridiri empat sampai dengan enam kata dalam satu larik\n
        \u000B •	Terdiri atas delapan sampai dengan dua belas suku kata.\n
        \u000B •	Larik pertama dan kedua merupakan sampiran dan larik ketiga dan keempat merupakan isi.\n
    </string>
    <string name="SpoilerMateriIndo2_A">Menulis Terbatas </string>
</resources>