<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/bgpilihan"
android:gravity="center"
android:orientation="vertical"
android:padding="10dp"
tools:layout_editor_absoluteX="0dp"
tools:layout_editor_absoluteY="79dp"
tools:context=".fragmentMateriINDO1">


<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginRight="3dp"
    android:layout_marginLeft="3dp"
    android:background="@drawable/bgmateri"
    tools:layout_editor_absoluteX="20dp"
    tools:layout_editor_absoluteY="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/materi2_indo"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.13">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            //A.	Menulis Terbatas
            <Button
                android:id="@+id/spoiler_indo1_A"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/spoilermateri"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:text="@string/SpoilerMateriIndo1_A"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text" />

            <LinearLayout
                android:id="@+id/spoiler_layout_indo1_A"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1.07"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                android:weightSum="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text">


                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/SpoilerMateriIndo1_A1"
                    android:textColor="@color/colorText"
                    android:visibility="visible" />

            </LinearLayout>

            //B.	Membaca Sastra

            <Button
                android:id="@+id/spoiler_indo1_B"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/spoilermateri"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:text="@string/SpoilerMateriIndo1_B"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text" />

            <LinearLayout
                android:id="@+id/spoiler_layout_indo1_B"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1.07"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                android:weightSum="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text">


                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/SpoilerMateriIndo1_B1"
                    android:textColor="@color/colorText"
                    android:visibility="visible" />

            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1.07" />


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>


</LinearLayout>